Update to latest spec, update deps (#8)
