# src/main/java/com/vertexvis/model/WebhookEventDataRelationships.java
@@ -1,0 +1,127 @@
+/*
+ * Vertex Platform API
+ * The Vertex distributed cloud rendering platform includes a set of APIs and SDKs, which together allow easily integrating 3D product data into your business application.  See our [Developer Guides](https://developer.vertexvis.com/docs/guides/render-your-first-scene) to get started.  Notes about the Postman collection and API Reference code samples,   - They include all required and optional body parameters for completeness. Remove any optional parameters as desired.   - They use auto-generated IDs and other values that may share the same value for ease of documentation only. In actual requests and responses, the IDs should uniquely identify their corresponding resource. 
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@vertexvis.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.vertexvis.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.google.gson.TypeAdapter;
+import com.google.gson.annotations.JsonAdapter;
+import com.google.gson.annotations.SerializedName;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import com.vertexvis.model.WebhookEventDataRelationshipsOwner;
+import com.vertexvis.model.WebhookEventDataRelationshipsResource;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.io.IOException;
+
+/**
+ * WebhookEventDataRelationships
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class WebhookEventDataRelationships {
+  public static final String SERIALIZED_NAME_OWNER = "owner";
+  @SerializedName(SERIALIZED_NAME_OWNER)
+  private WebhookEventDataRelationshipsOwner owner;
+
+  public static final String SERIALIZED_NAME_RESOURCE = "resource";
+  @SerializedName(SERIALIZED_NAME_RESOURCE)
+  private WebhookEventDataRelationshipsResource resource;
+
+
+  public WebhookEventDataRelationships owner(WebhookEventDataRelationshipsOwner owner) {
+    
+    this.owner = owner;
+    return this;
+  }
+
+   /**
+   * Get owner
+   * @return owner
+  **/
+  @ApiModelProperty(required = true, value = "")
+
+  public WebhookEventDataRelationshipsOwner getOwner() {
+    return owner;
+  }
+
+
+  public void setOwner(WebhookEventDataRelationshipsOwner owner) {
+    this.owner = owner;
+  }
+
+
+  public WebhookEventDataRelationships resource(WebhookEventDataRelationshipsResource resource) {
+    
+    this.resource = resource;
+    return this;
+  }
+
+   /**
+   * Get resource
+   * @return resource
+  **/
+  @ApiModelProperty(required = true, value = "")
+
+  public WebhookEventDataRelationshipsResource getResource() {
+    return resource;
+  }
+
+
+  public void setResource(WebhookEventDataRelationshipsResource resource) {
+    this.resource = resource;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    WebhookEventDataRelationships webhookEventDataRelationships = (WebhookEventDataRelationships) o;
+    return Objects.equals(this.owner, webhookEventDataRelationships.owner) &&
+        Objects.equals(this.resource, webhookEventDataRelationships.resource);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(owner, resource);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class WebhookEventDataRelationships {\n");
+    sb.append("    owner: ").append(toIndentedString(owner)).append("\n");
+    sb.append("    resource: ").append(toIndentedString(resource)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
