# src/main/java/com/vertexvis/model/WebhookEventDataRelationshipsOwnerLinks.java
@@ -1,0 +1,97 @@
+/*
+ * Vertex Platform API
+ * The Vertex distributed cloud rendering platform includes a set of APIs and SDKs, which together allow easily integrating 3D product data into your business application.  See our [Developer Guides](https://developer.vertexvis.com/docs/guides/render-your-first-scene) to get started.  Notes about the Postman collection and API Reference code samples,   - They include all required and optional body parameters for completeness. Remove any optional parameters as desired.   - They use auto-generated IDs and other values that may share the same value for ease of documentation only. In actual requests and responses, the IDs should uniquely identify their corresponding resource. 
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@vertexvis.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.vertexvis.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.google.gson.TypeAdapter;
+import com.google.gson.annotations.JsonAdapter;
+import com.google.gson.annotations.SerializedName;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.io.IOException;
+
+/**
+ * WebhookEventDataRelationshipsOwnerLinks
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class WebhookEventDataRelationshipsOwnerLinks {
+  public static final String SERIALIZED_NAME_RELATED = "related";
+  @SerializedName(SERIALIZED_NAME_RELATED)
+  private String related;
+
+
+  public WebhookEventDataRelationshipsOwnerLinks related(String related) {
+    
+    this.related = related;
+    return this;
+  }
+
+   /**
+   * Get related
+   * @return related
+  **/
+  @ApiModelProperty(example = "/some-resource/d98d621a-23da-49fe-af96-6be709abb718", required = true, value = "")
+
+  public String getRelated() {
+    return related;
+  }
+
+
+  public void setRelated(String related) {
+    this.related = related;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    WebhookEventDataRelationshipsOwnerLinks webhookEventDataRelationshipsOwnerLinks = (WebhookEventDataRelationshipsOwnerLinks) o;
+    return Objects.equals(this.related, webhookEventDataRelationshipsOwnerLinks.related);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(related);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class WebhookEventDataRelationshipsOwnerLinks {\n");
+    sb.append("    related: ").append(toIndentedString(related)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
